<resources>
    <string name="app_name">ProjetIntegrateur</string>
    <string name="pageInventaire">Inventaire</string>
    <string name="pageAjouterProduit">Ajouter produit</string>
    <string name="pageVoirProduit">Voir produit</string>
    <string name="pageModifierProduit">Modifier produit</string>
    <string name="pageAccueil">Accueil</string>

    <string name="OK">OK</string>
    <string name="bouttonGallery">Sélectionner image</string>
    <string name="bouttonNouveauProduit">Ajouter nouveau produit</string>
    <string name="bouttonAjouterProduit">Ajouter produit</string>
    <string name="bouttonAjouterPanier">Ajouter au panier</string>
    <string name="bouttonAjouterReparation">Ajouter Réparation</string>
    <string name="bouttonModifierReparation">Modifier la réparation</string>
    <string name="bouttonRetour">Retour</string>
    <string name="bouttonEdit">Modifier</string>
    <string name="bouttonCommander">Commander</string>
    <string name="bouttonFiltrer">Filtrer</string>
    <string name="bouttonPhoto">Prendre photo</string>
    <string name="bouttonModifier">Modifier produit</string>
    <string name="bouttonConfirmerModificatino">Confirmer modification</string>

    <string name="showCategorie">Catégorie : </string>
    <string name="showInventaire">En inventaire : </string>
    <string name="showComplete">Complété : </string>
    <string name="showID">ID : </string>
    <string name="showPrix">Prix : </string>
    <string name="showSujet">Sujet : </string>
    <string name="showDate">Date initale : </string>
    <string name="showEtat">État : </string>
    <string name="showMontant">Montant : </string>
    <string name="showMax">Max : </string>
    <string name="showMin">Min : </string>
    <string name="showDescription">Description : </string>
    <string name="showNom">Nom : </string>
    <string name="showQuantite">Quantité : </string>
    <string name="sherbOrdi">Équipe 4 - SherbOrdi</string>

    <!-->User Libelle<!-->
    <string name="userName">Nom :</string>
    <string name="userSurname">Prénom :</string>
    <string name="userMail">Courriel :</string>
    <string name="userTel">Téléphone :</string>
    <string name="userAddr">Adresse :</string>
    <string name="userCp">Code postale :</string>
    <string name="userCity">Ville :</string>
    <string name="userProv">Province :</string>
    <string name="userPw">Mot de passe :</string>
    <string name="userConfPw">Confirmer le mot de passe :</string>
    <string name="userRedirect">Créer un compte</string>


    <string name="userConnectLibelle">Veuillez entrer votre courriel et mot de passe pour continuer</string>

    <string name="userMenuEditCoord">Modifier ses coordonnées</string>
    <string name="userMenuEditPW">Modifier son mot de passe</string>
    <string name="userMenuEna2FA">Authentifiaction à double facteur</string>
    <string name="userMenuHistoryCommand">Historique des commandes</string>
    <string name="userMenuHystoryRepair">Historique des réparations</string>
    <string name="userMenuDisconnect">Se déconnecter</string>

    <string name="userEditPWOld">Ancien mot de passe :</string>
    <string name="userEditPWNew">Nouveau mot de passe :</string>
    <string name="userEditPWConf">Confirmer le mot de passe :</string>

    <string name="btnConf">Confirmer</string>
    <string name="btnConnect">Se Connecter</string>
    <string name="btnCancel">Annuler</string>

    <string name="showTotal">Total : </string>

    <string name="popUpText"></string>

    <string name="hintID"><font size ="13">ID</font></string>
    <string name="hintMin"><font size ="13">Minimum</font></string>
    <string name="hintMax"><font size ="13">Maximum</font></string>
</resources>