<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageReparation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/page_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="602dp"
            android:orientation="vertical"
            android:background="@color/maroon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonRetour"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_margin="15dp"
                        android:text="@string/bouttonRetour"
                        android:textColor="@null"
                        android:theme="@style/bouttonLight"
                        ></Button>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/showSujet"
                        android:theme="@style/textWhite"
                        android:textAlignment="textEnd"></TextView>

                    <EditText
                        android:id="@+id/editNom"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:ems="10"
                        android:inputType="text"
                        android:layout_marginStart="20dp"
                        android:paddingStart="10dp"
                        android:textColor="@null"
                        android:theme="@style/textWhite"
                        android:background="@drawable/round_style"
                        android:layout_gravity="center_vertical"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/showEtat"
                        android:textAlignment="textEnd"
                        android:theme="@style/textWhite"
                        tools:ignore="RtlCompat" />

                    <Spinner
                        android:id="@+id/spinnerStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="40dp"
                        android:paddingEnd="5dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/style_spinner"></Spinner>
                    <TextView
                        android:id="@+id/viewStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:visibility="gone"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:text="@string/showDescription"
                        android:layout_gravity="start"
                        android:textAlignment="textEnd"
                        android:theme="@style/textWhite"
                        tools:ignore="RtlCompat">
                    </TextView>

                    <EditText
                        android:id="@+id/editDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:ems="10"
                        android:inputType="text"
                        android:layout_marginStart="20dp"
                        android:lines="5"
                        android:gravity="top|start"
                        android:scrollbars="vertical"
                        android:textColor="@null"
                        android:theme="@style/textWhite"
                        android:paddingStart="10dp"
                        android:background="@drawable/round_style"
                        tools:ignore="RtlSymmetry"/>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonReparation"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/bouttonAjouterReparation"
                android:layout_gravity="center"
                android:textColor="@null"
                android:theme="@style/bouttonLight"
                style="?android:attr/buttonBarButtonStyle"></Button>

            <Button
                android:id="@+id/buttonModifier"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/bouttonModifierReparation"
                android:layout_gravity="center"
                android:textColor="@null"
                android:visibility="invisible"
                android:enabled="false"
                android:theme="@style/bouttonLight"
                style="?android:attr/buttonBarButtonStyle"></Button>

        </LinearLayout>

        <include layout="@layout/page_footer"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>